{
  "version": 4,
  "terraform_version": "1.14.4",
  "serial": 12,
  "lineage": "4a14f531-883f-74fe-fe7c-f36ac7cb337c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "terraform-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:686255974968:security-group/sg-048bfbc36c84e4bec",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-048bfbc36c84e4bec",
            "ingress": [],
            "name": "allow TLS from EIP",
            "name_prefix": "",
            "owner_id": "686255974968",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-09db691bdff879418"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "686255974968",
            "id": "sg-048bfbc36c84e4bec",
            "region": "ap-south-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "sg-rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:686255974968:security-group-rule/sgr-0ed3f0e08dcd1557d",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0ed3f0e08dcd1557d",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-048bfbc36c84e4bec",
            "security_group_rule_id": "sgr-0ed3f0e08dcd1557d",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "686255974968",
            "id": "sgr-0ed3f0e08dcd1557d",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_security_group.terraform-sg"
          ]
        }
      ]
    }
  ]
}